--- a/scss/device/profile/_profiletablet.scss
+++ b/scss/device/profile/_profiletablet.scss
@@ -5,19 +5,19 @@ $color2: rgb(198,164,126);
 
     .profile{
         flex-direction: row;
+        h2 {
+            font-size: 30px;
+        }
+    
+        h5 {
+            font-size: 18px;
+        }
+    
+        h4 {
+            font-size: 20px;
+        }
     }
 
-    h2 {
-        font-size: 30px;
-    }
-
-    h5 {
-        font-size: 18px;
-    }
-
-    h4 {
-        font-size: 20px;
-    }
 
     .pleft { 
         width: 35%;
@@ -79,6 +79,18 @@ $color2: rgb(198,164,126);
 
     .passw {
         font-size: 16px;
+    }
+
+    .wishList {
+        li > a:hover {
+            background-color: $color2;
+        }
+        figcaption i {
+            transition: .4s;
+            &:hover {
+                color: orange;
+            }
+        }
     }
     
     
