--- a/scss/device/profile/_profilemobile.scss
+++ b/scss/device/profile/_profilemobile.scss
@@ -142,6 +142,8 @@
         vertical-align: top;
         padding: 0 15px 0 0;
     }
+
+   
       
     .toggle-1__input {
         display: none;
@@ -313,14 +315,39 @@
 
 
     }
-
+    .trips{
+        box-shadow: 0 0 12px lightgray;
+        border: 1px solid $color1;   
+        padding: 3vh;
+        display: flex;
+        flex-direction: column;
+        row-gap: 3vh;
+        .gold {
+            color:rgb(120, 84, 45);
+            font-weight: bold;
+            font-style: italic;
+        }
+        figure{
+            display: flex;
+            column-gap: 2vh;
+            figcaption{
+                display: flex;
+                flex-direction: column;
+                row-gap: 1vh;
+            }
+        }
+        img{
+            width: 23vh;
+            height: 20vh;  
+        }
+    }
     .allAcc{
         box-shadow: 0 0 12px lightgray;
         border: 1px solid $color1;     
         padding: 3vh;
         display: flex;
         flex-direction: column;
-        row-gap: 1vh;
+        row-gap: 3vh;
         a{
             color: black;
         }
@@ -382,6 +409,14 @@
                     }
                 }
             }
+        }
+        .send{
+            background-color: $color2;
+            color: white;
+            border: solid 1px $color2;
+            width: 10vh;
+            cursor: pointer;
+            border-radius: 3px;
         }
     
 }
