profile design change

--- a/scss/device/profile/_profiledesktop.scss
+++ b/scss/device/profile/_profiledesktop.scss
@@ -82,6 +82,10 @@ $color2: rgb(198,164,126);
             font-size: 30px;
         }
     }
+
+    .pright {
+        width: 60%;
+    }
     
     
     
