--- a/scss/device/profile/_profilemobile.scss
+++ b/scss/device/profile/_profilemobile.scss
@@ -86,7 +86,7 @@
     .pright{
         display: flex;
         flex-direction: column;
-        padding: 3%;
+        padding: 1% 3%;
         row-gap: 2vh;
     }
 
@@ -129,81 +129,6 @@
             font-weight: 800;
             text-transform: uppercase;
         }
-    }
-
-    .passw {
-        display: flex;
-        row-gap: 3vh;
-        padding: 3vh;
-        border: 1px solid $color1;     
-        box-shadow: 0 0 12px lightgray;
-    }
-    
-    .onoff {
-        padding: 2%;
-    }
-    
-    .toggle-1 {
-        display: inline-block;
-        vertical-align: top;
-        padding: 0 15px 0 0;
-    }
-
-   
-      
-    .toggle-1__input {
-        display: none;
-    }
-      
-    .toggle-1__button {
-        position: relative;
-        cursor: pointer;
-        display: inline-block;
-        text-transform: uppercase;
-        font-size: 14px;
-        line-height: 20px;
-        width: 70px;
-        height: 40px;
-        color: white;
-        background-color: $color2;
-        border: solid 1px $color2;
-        border-radius: 25px;
-        transition: all 0.3 ease;
-    }
-      
-    .toggle-1__button::before {
-        position: absolute;
-        display: flex;
-        align-items: center;
-        top: 4px;
-        left: 20px;
-        height: 30px;
-        padding: 0 10px;
-        border-radius: 20px;
-        content: "off";
-        background: white;
-        color: $color2;
-        transition: all 0.3s ease;
-        
-    }
-
-    .toggle-1__input:checked + .toggle-1__button {
-        background: $color1;
-        border: solid 1px lightgray;
-        border-radius: 25px;
-        box-shadow: 0 0 12px lightgray;
-    }
-
-    .toggle-1__input:checked + .toggle-1__button::before {
-        content: 'on';
-        left: 5px;
-        color: $color1;
-    }
-
-    .bene {
-        display: flex;
-        flex-direction: column;
-        row-gap: 2vh;
     }
 
     .wishList {
@@ -432,6 +357,16 @@
             width: 10vh;
             cursor: pointer;
             border-radius: 3px;
+        }
+
+        .underline {
+            display: flex;
+            justify-content: center;
+            h2 {
+                border-bottom: 3px solid black;
+                min-width: 10vh;
+                padding-bottom: 1px;
+            }
         }
     
 }
