--- a/scss/device/desc/_desktop.scss
+++ b/scss/device/desc/_desktop.scss
@@ -44,5 +44,20 @@
             }
             
         }
+      
+
+
+    }
+    .page-404{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        h1{
+            font-size: 90px;
+        }
+        p{
+            font-size: 50px;
+
+        }
     }
 }
