get the bg picture and add footer and header

--- a/scss/device/login/_loginmobile.scss
+++ b/scss/device/login/_loginmobile.scss
@@ -1,6 +1,6 @@
 @media (min-width: $mobileScreen){
     .login{
-        background-image: url("/login/inc/img/login.jpg");
+        background-image: url("../login/inc/img/login.jpg");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
